mern app is finished with both frontend and backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,8 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "seed:admin": "node scripts/seedAdmin.js",
+    "seed:agents": "node scripts/seedAgents.js",
+    "seed:all": "npm run seed:admin && npm run seed:agents",
     "db:generate": "npx prisma generate",
     "db:migrate": "npx prisma migrate dev",
     "test": "jest",
@@ -31,6 +33,7 @@
     "@prisma/client": "^6.16.2",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
